transfer legacy posts

--- a/_posts/2018-06-22-咨询那些事儿.md
+++ b/_posts/2018-06-22-咨询那些事儿.md
@@ -1,8 +1,8 @@
 ---
 title: 咨询那些事儿
 date: 2018-06-22
-categories: [general]
-tags: [legacy]
+categories: [productivity]
+tags: [legacy, consulting]
 ---
 
 这几天来备战咨询，接触到许多商业领域的知识和分析方法，不管最后能不能找到令自己满意的offer，这段经历也让自己成长了不少。关于如何进行商业分析的套路有很多，但是在这些眼花缭乱的方法背后，总结下来大概有3点最本质，最核心的原则，在我看来所有分析方法都离不开这3个原则的影响，所谓万变不离其宗，大概就是这样。
