add post and favicon

--- a/_posts/2019-02-25-穷人的思维与机会成本.md
+++ b/_posts/2019-02-25-穷人的思维与机会成本.md
@@ -2,7 +2,7 @@
 title: 穷人的思维与机会成本
 date: 2019-02-25
 categories: [life, introspect]
-tags: [legacy, money, 经济学原理]
+tags: [legacy, 经济学原理]
 ---
 
 最近在看曼昆的经济学原理，十分佩服作者能用如此深入浅出，通俗易懂的语言把经济学背后的原理阐述得这么明白。
