--- a/_posts/2025-02-05-如何写好一篇博客.md
+++ b/_posts/2025-02-05-如何写好一篇博客.md
@@ -39,6 +39,7 @@ pin: true # optional
    2. principles: 值得反复阅读并身体力行的观点
    3. reading: 阅读笔记
    4. workout: 健身相关的笔记
+   5. investment: 和投资相关的总结
 
 ## 文章排版
 
