--- a/_posts/2025-02-09-一文看懂日本纳税制度.md
+++ b/_posts/2025-02-09-一文看懂日本纳税制度.md
@@ -2,7 +2,7 @@
 title: 一文看懂日本纳税制度
 date: 2025-02-09
 categories: [life, investment]
-tags: [tax]
+tags: [tax, japan, 一文看懂]
 ---
 
 日本主要税种包括三大类：所得税（国税）、住民税（地方税）、消费税。所得税和住民税计算比较复杂，在下面详细展开。消费税为统一税率10%，部分食品和新闻订阅适用8%的轻减税率。
