--- a/_posts/2025-02-05-如何写好一篇博客.md
+++ b/_posts/2025-02-05-如何写好一篇博客.md
@@ -34,12 +34,12 @@ pin: true # optional
 2. SDE: 软件开发，编程技术相关内容
 3. car: 自动驾驶，车辆软件开发与车辆工程相关内容。
 4. productivity: 提高工作效率、优化时间管理和个人生产力的技巧和工具。
-5. life: 读书笔记，日常感想，旅行记录等。
+5. investment: 和投资相关的总结，把投资当作一场长线的人生游戏。
+6. life: 读书笔记，日常感想，旅行记录等。
    1. introspect: 定期的反省和总结
    2. principles: 值得反复阅读并身体力行的观点
    3. reading: 阅读笔记
    4. workout: 健身相关的笔记
-   5. investment: 和投资相关的总结
 
 ## 文章排版
 
