update old posts

--- a/_posts/2025-03-15-一文看懂Shell.md
+++ b/_posts/2025-03-15-一文看懂Shell.md
@@ -56,10 +56,19 @@ Fri 10 Jan 2020 11:49:31 AM EST
 
 ### 常用工具
 1. `grep`：文本内容检索，用于搜索匹配的行，支持基本正则(grep) 和扩展正则 (grep -E)
-2. `sed`：流编辑器，用于替换、删除、插入文本，支持基本正则
-3. `awk`：文本分析工具，支持正则匹配，用于数据筛选、统计等
+2. `sed`：基于行的文本编辑器，用于替换、删除、插入文本，支持基本正则（-E）
+3. `awk`：基于列的文本分析工具，支持正则匹配，用于数据筛选、统计等
 4. `find`：文件搜索
 5. `tar`/`zip`：压缩解压
+6. `less`：分页查看文件内容
+7. `wc`：统计行数、单词数和字节数
+8. `sort`：排序
+9. `uniq`：清除重复数据，需要在排序后使用
+10. `paste`：将多行输入数据拼接成单行（-s），并用特定的分隔符分割（-d,）
+11. `bc`：命令行计算器，支持文本输入（使用echo等）
+12. `xargs`：将多行文本转换成后续命令的输入参数，在查找文件并进行后续操作时非常有用。
+13. `ffmpeg`：对图像和视频数据进行处理
+14. `head`, `tail`：显示输入数据的首/尾数据，可指定显示的行数（-n10）
 
 ### 输入输出重定向
 ```bash
@@ -308,13 +317,34 @@ python ./test.py a b c
 # 使用shebang语句
 ./test.py a b c
 ```
+## 3. CLI 开发环境
 
-## 3. 最佳实践
-1. 使用版本控制管理配置文件`~/.bashrc`, `~/.zshrc`
-2. 为常用操作创建别名`alias ll="ls -lah"`
-3. 保持命令可读性（合理换行）
-4. 环境变量：`PATH`, `HOME`, `EDITOR` 等
-5. 使用shellcheck查看脚本是否有语法错误
+### job control
+
+```bash
+# 后台运行一个进程&
+nohup sleep 100 &
+
+# 打印当前正在运行的进程
+jobs
+
+# 使用快捷键Ctrl+z可以暂停进程，使用下面命令继续执行进程
+bg %1
+
+# 暂停或消灭进程
+kill -STOP %1
+kill -KILL %1
+```
+
+### dotfile
+
+CLI使用dotfile来对其进行配置，可以把配置文件集中保存，通过git进行管理，然后连接(symlink)到home目录下。
+
+```bash
+ln -s path/to/file sysmlink
+```
+
+相比于直接读man文档，更好的学习方法是在GitHub中搜索dotfiles，然后从其他人分享的配置文件中学习。
 
 ## 4. 现代工具链
 
@@ -341,19 +371,18 @@ rg -u --files-without-match "^#\!" -t sh
 实用工具：
 1. `zsh-history-substring-search`：历史命令动态补全，目前还没有配置成功。
 2. `broot`：可交互式快速查找文件并打开
-3. 
+3. `tmux`：多终端窗口管理工具
 
-### 终端多路复用：tmux
+## 5. 最佳实践 
 
-Tmux（Terminal Multiplexer）允许用户在一个窗口内创建多个终端会话。用户可以从命令行分离和重新连接到会话，将终端分割成多个窗格，并将它们组织成多个窗口。主要优势
-- **会话持久性**：即使断开 SSH 连接或关闭终端，也能保持会话运行
-- **多窗格和多窗口**：通过分割视图和多个窗口来组织工作
-- **结对编程**：与其他用户共享终端会话
-- **可定制性**：可根据工作流程进行广泛配置
-- **可脚本化**：自动化复杂的终端设置
+1. 使用版本控制管理配置文件`~/.bashrc`, `~/.zshrc`
+2. 为常用操作创建别名`alias ll="ls -lah"`
+3. 保持命令可读性（合理换行）
+4. 环境变量：`PATH`, `HOME`, `EDITOR` 等
+5. 使用shellcheck查看脚本是否有语法错误
+6. 检验正则表达式是否正确的小技巧：利用一些便捷的网络工具
 
-
-## 5. 常用快捷键
+### 常用快捷键
 
 | 快捷键   | 功能                     |
 | -------- | ------------------------ |
