--- a/_posts/2025-03-16-一文看懂tmux.md
+++ b/_posts/2025-03-16-一文看懂tmux.md
@@ -64,10 +64,12 @@ run '~/.tmux/plugins/tpm/tpm'
 ```bash
 tmux new -s mysession    # 创建一个名为mysession的新会话
 tmux ls                  # 列出所有会话
+tmux detach              # 分离当前会话，也可以使用下面的快捷键
 tmux attach -t mysession # 重新连接指定会话
 tmux attach              # 重新连接上一个会话
 tmux kill-session -t session_name # 删除指定会话
 tmux kill-server                  # 删除所有会话
+tmux switch -t session_name       # 切换到指定会话
 ```
 
 | 快捷键     | 功能           |
@@ -79,19 +81,13 @@ tmux kill-server                  # 删除所有会话
 | 前缀键 + ? | 查看快捷键帮助 |
 
 
-### 窗口操作
+### 窗格(pane)管理
 
-| 快捷键        | 功能               |
-| ------------- | ------------------ |
-| 前缀键 + c    | 创建新窗口         |
-| 前缀键 + n    | 切换到下一个窗口   |
-| 前缀键 + p    | 切换到上一个窗口   |
-| 前缀键 + 数字 | 跳转到指定编号窗口 |
-| 前缀键 + &    | 关闭当前窗口       |
-| 前缀键 + ,    | 重命名当前窗口     |
-| 前缀键 + w    | 列出所有窗口       |
-
-### 窗格管理
+```bash
+tmux split-window               # 划分为上下两个窗格， -h 可以进行水平分割
+tmux select-pane -U/-D/-L/-R    # 切换到不同的窗格
+tmux swap-pane -U/-D            # 交换窗格的位置
+```
 
 | 快捷键          | 功能           |
 | --------------- | -------------- |
@@ -102,6 +98,26 @@ tmux kill-server                  # 删除所有会话
 | 前缀键 + x      | 关闭当前窗格   |
 | 前缀键 + q      | 显示窗格编号   |
 | 前缀键 + Space  | 切换窗格布局   |
+| 前缀键 + {      | 与上一个窗格交换位置 |
+| 前缀键 + }      | 与下一个窗格交换位置 |
+
+### 窗口(window)操作
+
+```bash
+tmux new-window -t name           # 创建一个新窗口
+tmux select-window -t name/No     # 切换到指定窗口
+tmux rename-window name           # 为窗口重命名，也可以使用下面的快捷键
+```
+
+| 快捷键        | 功能               |
+| ------------- | ------------------ |
+| 前缀键 + c    | 创建新窗口         |
+| 前缀键 + n    | 切换到下一个窗口   |
+| 前缀键 + p    | 切换到上一个窗口   |
+| 前缀键 + 数字 | 跳转到指定编号窗口 |
+| 前缀键 + &    | 关闭当前窗口       |
+| 前缀键 + ,    | 重命名当前窗口     |
+| 前缀键 + w    | 列出所有窗口       |
 
 
 ### 复制模式
