--- a/_posts/2025-03-19-一文看懂vim.md
+++ b/_posts/2025-03-19-一文看懂vim.md
@@ -246,3 +246,11 @@ Watch a practice demo in the [missing semester lecture](https://missing.csail.mi
 - 批量插入：按 I（大写 i），输入文本，然后按 Esc，Vim 会在所有选中的行插入相同的文本。
 - 批量追加：按 A（大写 a），输入文本，然后按 Esc，Vim 会在所有选中的行末尾追加相同的文本。
 - 批量删除：按 d 删除选中的块。
+
+
+## Resources
+
+1. [Vim Tips Wiki](https://vim.fandom.com/wiki/Vim_Tips_Wiki) 
+2. [Vim Golf](https://www.vimgolf.com)
+3. [Vi/Vim Stack Exchange](https://vi.stackexchange.com)
+4. [missing semester of your CS education](https://missing.csail.mit.edu/2020/editors/)
