publish new posts

--- a/_posts/2025-02-13-一文看懂Git.md
+++ b/_posts/2025-02-13-一文看懂Git.md
@@ -15,6 +15,57 @@ Linus开发Git的主要目标是：
 - 完全分布式
 - 能够高效管理类似Linux内核一样的超大规模项目
 
+## Data Model of Git 
+
+Git项目由文件夹(tree)和文件(blob)组成：
+
+```
+<root> (tree)
+|
++- foo (tree)
+|  |
+|  + bar.txt (blob, contents = "hello world")
+|
++- baz.txt (blob, contents = "git is wonderful")
+```
+
+其在计算机内部的存储可以由下面的伪代码进行描述：
+
+```
+// a file is a bunch of bytes
+type blob = array<byte>
+
+// a directory contains named files and directories
+type tree = map<string, tree | blob>
+
+// a commit has parents, metadata, and the top-level tree
+type commit = struct {
+    parents: array<commit>
+    author: string
+    message: string
+    snapshot: tree
+    }
+
+// an object is a blob, tree, or commit
+type object = blob | tree | commit
+
+// all objects are content-addressed by their SHA-1 hash
+objects = map<string, object>
+
+def store(object):
+    id = sha-1(ogject)
+    objects[id] = object
+
+def load(id):
+    return object[id]
+
+// references are a human-readable name for SHA-1 hashes, like HEAD, main
+references = map<string, string>
+
+// check the above data model in real git
+git cat-file -p <blob | tree | commit id>
+```
+
 ## 安装和配置Git
 
 MacOS可以通过homebrew安装Git：
@@ -72,13 +123,11 @@ Thumbs.db
 ### 添加更改：git add
 
 ```bash
-# git add 命令的常用形式：
-git add <文件名>     # 添加指定文件到暂存区
 git add .           # 添加当前目录下的所有文件到暂存区
 git add -A          # 添加所有变化到暂存区（包括新建、修改和删除的文件）
 git add -u          # 添加已被跟踪的文件的修改和删除，不包括新文件
 git add -i          # 交互式添加文件到暂存区
-git add -p          # 以补丁模式添加文件，可以选择部分更改进行暂存
+git add -p          # 以补丁模式添加文件，可以选择部分更改进行暂存，在某些场合非常实用！
 git add *.js        # 使用通配符，添加所有JavaScript文件
 ```
 
@@ -94,7 +143,6 @@ git add *.js        # 使用通配符，添加所有JavaScript文件
 - chore: 其他更改，低风险，不需要测试
 
 ```bash
-# git commit 命令的常用形式：
 git commit -m "<提交说明>"      # 提交暂存区的更改并添加说明
 git commit -am "<提交说明>"     # 将所有已跟踪的文件的更改提交（相当于git add + git commit）
 git commit --amend            # 修改最近一次提交的信息或内容
@@ -122,7 +170,6 @@ git stash -a               # 包含所有文件（包括被忽略的文件）
 # 查看stash
 git stash list             # 查看所有stash
 git stash show            # 查看最新stash的内容
-git stash show -p         # 查看最新stash的详细差异
 
 # 应用stash
 git stash pop             # 应用并删除最新的stash
@@ -134,7 +181,7 @@ git stash drop            # 删除最新的stash
 git stash clear           # 删除所有stash
 ```
 
-### 撤销更改：git reset
+### 撤销更改：git reset, git checkout 
 
 最佳实践：
 - 在feature分支上自由使用reset，在main分支上谨慎使用reset
@@ -146,13 +193,32 @@ git stash clear           # 删除所有stash
 
 ```bash
 # 撤销更改
-git reset --soft <commit_id> # 保留工作目录和暂存区的更改
-git reset --mixed <commit_id> # 保留工作目录的更改，删除暂存区的更改（默认模式）
-git reset --hard <commit_id> # 删除工作目录和暂存区的更改
+git reset --soft <commit id> # 保留工作目录和暂存区的更改
+git reset --mixed <commit id> # 保留工作目录的更改，删除暂存区的更改（默认模式）
+git reset --hard <commit id> # 删除工作目录和暂存区的更改
 
 # 在使用`--hard`前先创建备份分支
 git branch backup-branch
 git reset --hard HEAD~3
+
+# 撤销对某个文件的更改
+git checkout <file>
+```
+
+### 远程管理：git remote, git fetch, git clone
+
+```bash
+# 查看本地仓库的远程地址
+git remote -vv 
+
+# 为本地仓库添加一个远程地址，name一般为origin
+git remote add <name> <url>
+
+# 抓取远程仓库的status，抓取完之后可以通过git log查看，但不会对本地的项目进行更改，需要更改的话使用git pull
+git fetch
+
+# 当克隆一个非常大的远程仓库时（包含上万条commit），可以通过shallow参数，只克隆最新的版本来加快速度
+git clone --shallow <url>
 ```
 
 ### 远程推送：git push
@@ -167,7 +233,6 @@ git reset --hard HEAD~3
 # git push 命令的常用形式：
 git push <远端别名> <分支名>        # 推送本地分支到远端
 git push -u <远端别名> <分支名>     # 推送本地分支到远端并设置默认远端和分支
-git push                           # 推送当前分支到默认远程分支
 git push --delete <远端别名> <分支名> # 删除远程分支
 ```
 
@@ -195,36 +260,6 @@ git pull 实际上是两个命令的组合：
 1. `git fetch`: 从远程获取最新代码
 2. `git merge/rebase`: 将获取的代码合并到本地
 
-#### merge 与 rebase 的区别
-1. merge方式（默认）
-   - 创建一个新的合并提交
-   - 保留完整的提交历史
-   - 分支历史呈现分叉结构
-
-2. rebase方式
-   - 将本地提交移动到远程分支的最新提交之后
-   - 产生线性的提交历史
-   - 更清晰的版本演进线图
-
-#### 快进合并
-
-快进合并（fast-forward merge）是一种特殊的合并方式，当本地分支的提交历史是远程分支的直接延续时，使用快进合并可以简化合并过程。
-
-```bash
-   # 合并前
-   master: A -> B -> C
-   feature:           C -> D -> E
-   
-   # 快进合并后
-   master: A -> B -> C -> D -> E
-   feature:           C -> D -> E
-
-   # 非快进合并后
-   master: A -> B -> C --------> M
-                       \       /
-   feature:            D -> E
-```
-
 ### 分支管理：git branch, git switch
 
 最佳实践：
@@ -232,6 +267,7 @@ git pull 实际上是两个命令的组合：
 - 功能开发在特性分支进行
 - 定期同步主分支到特性分支
 - 及时删除已合并的分支
+- 为每个分支设置上游分支，以便确认当前分支和上游分支的关系
 
 分支命名建议：
 - feature/* : 新功能分支
@@ -243,10 +279,8 @@ git pull 实际上是两个命令的组合：
 
 ```bash
 # 查看分支
-git branch                  # 列出本地所有分支
-git branch -r              # 列出远程所有分支
+git branch -vv             # 列出本地所有分支，详细模式
 git branch -a              # 列出所有本地和远程分支
-git branch -v              # 查看各分支最后一次提交
 
 # 创建分支
 git branch <分支名>                     # 创建新分支
@@ -263,37 +297,65 @@ git branch -m <旧名> <新名>  # 重命名分支
 
 # 切换分支
 git switch <分支名>              # 切换到指定分支
-git switch -                    # 切换到上一个分支
+
+# 手动设置上游分支（远程分支）
+git branch --set-upstream-to=origin/remote-branch-name
+# 也可以在push的时候设置上游分支（推荐）
+git push -u origin remote-branch-name
 ```
 
-### 历史管理：git log
+### 合并分支：git merge, git rebase 
 
-最佳实践：
-- 保持提交粒度适中，每个提交专注于一个改动
-- 定期使用git log检查项目历史
-- 使用合适的format选项优化log输出
+merge 和 rebase 的区别：
+1. merge方式（默认）
+   - 创建一个新的合并提交
+   - 保留完整的提交历史
+   - 分支历史呈现分叉结构
 
-常用的format占位符：
-- %h: 提交的简短哈希值
-- %an: 作者名字
-- %ar: 作者修订日期，按多久以前的方式显示
-- %s: 提交说明
+2. rebase方式
+   - 将本地提交移动到远程分支的最新提交之后
+   - 产生线性的提交历史
+   - 更清晰的版本演进线图
+
+无冲突合并、快进合并（fast-forward merge）：当本地分支的提交历史是远程分支的直接延续时（即没有合并冲突），使用快进合并可以简化合并过程。
+
+当出现合并冲突时，则需要手动查看冲突地方，解决冲突之后完成合并。
 
 ```bash
-# 基本查看
-git log                     # 查看提交历史
-git log --oneline          # 单行显示提交历史
-git log -p                 # 显示提交的详细差异
+# 开始合并，将dog分支合并到当前分支上，当前分支一般为主分支
+git merge dog
+
+# 出现合并冲突时，Git会提示发生冲突的是哪个文件，打开文件，找到提示冲突的地方，删去冲突提示语，解决冲突，保存文件
+vim animal.py
+
+# 解决完冲突，将文件添加到暂存区
+git add animal.py
+
+# 提交解决完冲突后的文件
+git merge --continue
+```
+
+### 历史管理：git log, git checkout
+
+最佳实践：
+- 定期使用git log检查项目历史
+- 使用合适的format选项优化log输出
+- 使用git checkout在不同的commit之间进行跳转，本质上是将HEAD指向特定的commit
+
+```bash
+git log                   # 查看提交历史
 git log --stat            # 显示简要统计信息
 
-# 格式化输出
 git log --pretty=format:"%h - %an, %ar : %s"  # 自定义输出格式
-git log --graph           # 图形化显示分支合并历史
 
-# 筛选查看
 git log -n <数量>         # 显示最近n条提交
 git log --author="用户名"  # 查看特定作者的提交
 git log --since="2 weeks ago"  # 查看最近两周的提交
+
+# 万金油语句，可以保存成alias快速调用！
+git log --all --graph --decorate --oneline
+
+git checkout <commit id>  # 跳转到之前的commit
 ```
 
 ### 标签管理：git tag
@@ -322,6 +384,18 @@ git push origin --tags     # 推送所有标签到远程
 # 删除标签
 git tag -d <标签名>         # 删除本地标签
 git push origin :refs/tags/<标签名>  # 删除远程标签
+```
+
+### 其他
+
+```
+# 查看文件中的每一行所对应的commit和author
+git blame <filename>
+# 找到某一行对应的commit之后，查看这次commit的详细信息
+git show <commit id>
+
+# 快速查找从哪次commit开始，unit test无法通过
+git bisect
 ```
 
 ## 为开源项目贡献代码
