--- a/_posts/2022-12-04-置身事内.md
+++ b/_posts/2022-12-04-置身事内.md
@@ -1,8 +1,8 @@
 ---
 title: 置身事内
 date: 2022-12-04
-categories: [life]
-tags: [reading, 置身事内, 分税制改革, 土地财政, 私募基金, 货币政策, 量化宽松, 现代货币理论]
+categories: [life, reading]
+tags: [置身事内, 分税制改革, 土地财政, 私募基金, 货币政策, 量化宽松, 现代货币理论]
 ---
 
 ## 读后感
