--- a/_posts/2025-03-29-从零搭建开发环境.md
+++ b/_posts/2025-03-29-从零搭建开发环境.md
@@ -21,7 +21,9 @@ terminal外部环境配置完成之后，还需要对内部的prompt样式等进
 
 - zoxide: 增强版的cd，可以自动推荐目录
 
-## 编辑器：neovim
+## 编辑器1：neovim
+
+**neovim 作为首选编辑器，主要用于编写代码和纯英文相关的技术文档。**
 
 fork TJ的kickstart项目，通过`~/.config/nvim/init.lua`对neovim进行配置，具体配置可以参考fork后的repo。
 
@@ -30,5 +32,35 @@ fork TJ的kickstart项目，通过`~/.config/nvim/init.lua`对neovim进行配置
 参考ThePrimeagen的neovim系列视频，练习neovim的快捷键。
 
 ## 窗口管理器：tmux
+
+用于多窗口管理和项目编辑的临时保存。
+
+## 编辑器2: vs code
+
+**vs code主要用来写中文博客，和review一些比较复杂的项目。**
+
+vs code一些有用的设置
+
+- 将光标保持在屏幕居中位置：cursor surrounding line = 100，使用体验：当前行会莫名抽动，体验不太好，建议重设回0。
+- 显示相对行数：line numbers = relative
+
+vs code的一些有用的插件
+
+- 好看的主题：vesper，非常高级和漂亮的黑色主题，强烈推荐
+- 代码截图：code snap，为代码块生成漂亮的截图
+- 专注模式：toggle zen mode，一键<Ctrl+K, Z>进入全屏模式，专注代码书写
+- 图标美化：material icon sheme，为不同类型的文件添加好看的图标
+
+
+## 万能工具箱：Raycast
+
+Raycast相当于apple自带的spotlight的全面升级版，提供了很多实用的小功能，目前最常用的是对每个应用设置快捷键，直接从键盘打开相应的应用，不需要再使用鼠标。
+
+目前设置的快捷键如下：
+- <Shift+1>: vs code
+- <Shift+2>: iTerm2
+- <Shift+3>: cursor
+- <Shift+0>: system settings
+- <Shift+9>: web browser
 
 
