publish new posts

--- a/_posts/2018-12-16-一些实用的健身Tips.md
+++ b/_posts/2018-12-16-一些实用的健身Tips.md
@@ -5,7 +5,16 @@ categories: [life, workout]
 tags: [legacy]
 ---
 
-一些关于的健身的实用建议和观点，整理自网络。
+## 新手增肌理论
+
+没有周期计划的健身和工地打工干活无异。周期计划指的是服务于运动目标制定的短期或长期计划。需要注意到几个原理：
+1. 专项性
+2. 超负荷
+3. 疲劳管理
+4. 超量恢复 
+5. 动作/计划变式
+6. 阶段目标
+7. 个体差异
 
 ## 安全永远是第一位
 
