--- a/_posts/2025-03-15-一文看懂Shell.md
+++ b/_posts/2025-03-15-一文看懂Shell.md
@@ -210,6 +210,9 @@ timeout 5s slow_command
 
 ## 2. 脚本编程Script
 
+### Cheatsheet
+![bash-script](https://pbs.twimg.com/media/GdYNK4zXQAExzFQ?format=jpg&name=4096x4096)
+
 ### 变量操作
 ```bash
 name="John"  # 变量定义
