更新多个新文章，包括Python、C语言、gRPC、Agile和面试经验总结，添加Git开发规范，涵盖语义化版本号和提交规范。

--- a/_posts/2025-02-13-一文看懂Git.md
+++ b/_posts/2025-02-13-一文看懂Git.md
@@ -398,6 +398,59 @@ git show <commit id>
 git bisect
 ```
 
+## Git 开发规范
+
+### 语义化版本号
+
+语义化版本控制（Semantic Versioning）是一种版本命名规范，根据规范，版本号由三个部分组成：主版本号（MAJOR）、次版本号（MINOR）和修订号（PATCH）。
+
+根据变更类型，递增版本号的规则如下：
+1. 当进行不兼容的API更改时，递增主版本号（MAJOR）
+2. 当以向后兼容的方式添加功能时，递增次版本号（MINOR）
+3. 当进行向后兼容的错误修复时，递增修订号（PATCH）
+4. 预发布版本和Meta-data可以作为附加标签（Labels）添加到主版本号、次版本号和修订号的后面
+
+> MAJOR.MINOR.PATCH-Labels
+{: .prompt-info }
+
+### Commit规范
+
+[Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/)
+
+```
+<type>[optional scope]: <description>
+
+[optional body]
+
+[optional footer(s)]
+```
+
+每次提交的Commit都应该符合上面的格式：
+1. 类型（type）：
+   - feat: 新功能
+   - fix: 修复bug
+   - refactor: 重构代码
+   - style: 调整格式，不影响代码逻辑的更改（例如空格、格式化、删除日志）
+   - chore: 其他更改
+   - perf: 性能优化
+   - test: 添加测试
+   - build: 构建过程或外部依赖项的更改
+   - ci: 持续集成
+   - docs: 文档更新
+   - revert: 回滚到之前的提交
+
+2. 作用域（scope）：
+   - 可选，用于说明本次提交的影响范围，例如：文件名、文件夹名、模块名、组件名、类名
+
+3. 描述（description）：
+   - 简短描述本次提交的内容
+   - 开头的第一个词尽量从下面选取：Create、Modify、Add、Fix、Refactor、Release、Document、Update、Remove、Delete
+   - 首字母大写，语言精简，少于50个单词，使用动词原型
+
+4. 主体（body）：
+   - 可选，用于提供更详细的描述
+   - 可以包含多个段落，每段落之间用空行分隔
+
 ## 为开源项目贡献代码
 
 参考[HowToContribute](https://github.com/easzlab/kubeasz/blob/master/docs/mixes/HowToContribute.md)
