add new post generation feateure, add new posts

--- a/_posts/2024-02-18-leetcode经典题目.md
+++ b/_posts/2024-02-18-leetcode经典题目.md
@@ -5,6 +5,66 @@ categories: [SWE]
 tags: [LeetCode, 刷题]
 ---
 
+
+## Binary Search
+Given an sorted integer array - nums, and an integer - target. 
+- Find the any/first/last position of target in nums 
+- Return -1 if target does not exist.
+- Time Complexity: O(logn)
+
+```python
+def binary_search(nums, target):
+    left, right = 0, len(nums) - 1
+    while left <= right:
+        mid = (left + right) // 2
+        if nums[mid] == target:
+            return mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+```
+
+## Binary tree and divide and conquer
+- traverse a binary tree: 
+    - preorder: root, left, right
+    - inorder: left, root, right
+    - postorder: left, right, root
+- divide and conquer: 
+    - divide the problem into subproblems
+    - solve the subproblems
+    - combine the solutions of the subproblems
+
+## BFS
+- Breadth-First Search
+- Use a queue to store the nodes to be visited
+- Visit all the nodes at the current level before moving on to the next level
+- Time Complexity: O(n)
+
+```python
+def bfs(root):
+    queue = [root]
+    while queue:
+        node = queue.pop(0)
+        # process the node
+        # add the children of the node to the queue
+```
+
+## DFS
+- Depth-First Search
+- Use a stack to store the nodes to be visited
+- Visit the deepest nodes first
+- Time Complexity: O(n)
+
+```python
+def dfs(root):
+    stack = [root]
+    while stack:
+        node = stack.pop()
+        # process the node
+        # add the children of the node to the stack
+```
+
 ## 数组和链表
 1. Three Sum（求三数之和）
 2. Majority Element（求众数）
