bugfix: remove http link and invalid image

--- a/_posts/2024-05-09-个人投资课9-常用投资工具与资源.md
+++ b/_posts/2024-05-09-个人投资课9-常用投资工具与资源.md
@@ -19,8 +19,8 @@ tags: [个人投资课]
 1. 天天基金网：可以查看基金业绩，规模，持仓，基金经理基本信息。
 2. 理杏仁：可以查看各种股票、行业、指数的各种指标，包括历史市盈率、市净率、  
    市销率、股息率等。
-3. 上海证券交易所： [http://www.sse.com.cn](http://www.sse.com.cn)
-4. 深圳证券交易所： [http://www.szse.cn](http://www.szse.cn)
+3. 上海证券交易所： [https://www.sse.com.cn](https://www.sse.com.cn)
+4. 深圳证券交易所： [https://www.szse.cn](https://www.szse.cn)
 5. 中证指数公司官网： [http://www.csindex.com.cn](http://www.csindex.com.cn)
 6. MSCI 官网，全球最大最权威的指数制定公司之一： [https://www.msci.com](https://www.msci.com)
 7. 国际主流 etf 基金查询平台： [https://www.etf.com](https://www.etf.com)
@@ -36,7 +36,7 @@ tags: [个人投资课]
 
 ## 海外投资参考
 
-1. 专业性的全球资产配置工具： [Link](https://interactive.researchaffiliates.com/assetallocation#!/?currency=USD&expanded=tertiary&group=all&model=ER& models=ER&scale=LINEAR&terms=REAL&tertiary=shiller-pe-cape-ratiobox&type=Equities)
+1. 专业性的全球资产配置工具： [https://interactive.researchaffiliates.com/asset-allocation](https://interactive.researchaffiliates.com/asset-allocation)
 2. 全球 CAPE 估值查看： [https://www.starcapital.de/en/research/stock-marketvaluation/](https://www.starcapital.de/en/research/stock-marketvaluation/)
 3. 全球及美国各种宏观和资产数据： [https://www.federalreserve.gov](https://www.federalreserve.gov)
 
