fix invalid link

--- a/_posts/2024-05-09-个人投资课9-常用投资工具与资源.md
+++ b/_posts/2024-05-09-个人投资课9-常用投资工具与资源.md
@@ -21,7 +21,7 @@ tags: [个人投资课]
    市销率、股息率等。
 3. 上海证券交易所： [https://www.sse.com.cn](https://www.sse.com.cn)
 4. 深圳证券交易所： [https://www.szse.cn](https://www.szse.cn)
-5. 中证指数公司官网： [http://www.csindex.com.cn](http://www.csindex.com.cn)
+5. 中证指数公司官网： [https://www.csindex.com.cn](https://www.csindex.com.cn)
 6. MSCI 官网，全球最大最权威的指数制定公司之一： [https://www.msci.com](https://www.msci.com)
 7. 国际主流 etf 基金查询平台： [https://www.etf.com](https://www.etf.com)
 
